<resources>
    <string name="app_name">Medicine Reminder</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="WelcomToRemiderApp">Welcom To Remider App</string>
    <string name="Login">Login</string>
    <string name="Password">" Password"</string>
    <string name="Email">Email</string>
    <string name="SignUp">Sign Up</string>
    <string name="UserName">User Name</string>
    <string name="display">Display</string>
    <string name="medicine_name">Medicine Name :</string>
    <string name="medicine_type">Medicine Type :</string>
    <string name="remaining_amount">Remaining Amount :</string>
    <string name="doseAmount">DoseAmount :</string>
    <string name="alarm_starts_at">Alarm Starts at :</string>
    <string name="alarm_type">Alarm Type :</string>
    <string name="start_date">Start Date :</string>
    <string name="end_date">End Date :</string>
    <string name="bottle_size">Bottle Size :</string>
    <string name="how_to_use">How to use :</string>
    <string name="add_dose">Add Dose</string>
    <string name="edit">Edit</string>
    <string name="et_medicine_name">Medicine Name</string>
    <string name="number_of_doses">Number of Doses</string>
    <string name="strength">Strength</string>
    <string name="medicine_left">Medicine Left</string>
    <string name="medicine_size">Medicine Size</string>
    <string name="medicine_reason">Medicine Reason</string>
    <string name="start_date_add">Start Date</string>
    <string name="selected_start_date">Selected Start Date</string>
    <string name="end_date_add">End Date</string>
    <string name="selected_end_date">Selected End Date</string>
    <string name="done">Done</string>
    <string name="refill_reminder">Refill reminder</string>

    <string name="more">More</string>

    <string name="AddTaker">Add</string>
    <string name="AddHealthTaker">Add Health Taker</string>
    <string name="takerDescription">A Health Taker ia a family member or friend that track your doses and help you to take your meds on the time</string>

    <string name="Profile">Profile</string>
    <string name="Gender">Gender</string>
    <string name="select_time">Select Time</string>
    <string name="time_selected">time selected</string>
    <string name="weight">Weight</string>
    <string name="ConfirmPassword">ConfirmPassword</string>
    <string name="medications">Medications</string>
    <string name="Request">Request</string>
    <string name="Requests">   Requests</string>
    <string name="Confirm">Confirm</string>
    <string name="Delete">Delete</string>
    <string name="imgmednotification">imgMedNotification</string>
    <string name="skip">Skip</string>
    <string name="take">Take</string>
    <string name="snooze">Snooze</string>
    <string name="channel_name">MedicalReminder</string>
    <string name="channel_description">MedicalDescription</string>
    <string name="refill_your_medicine">Refill your Medicine</string>
    <string name="take_medicine_dialog">Take</string>
    <string name="cancel_med_dialog">Cancel</string>
    <string name="_1">1</string>
    <string name="refill">Refill</string>
    <string name="doneBtnSecondMedicineDialog">Done</string>

</resources>